[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web3_premium"
version = "0.0.1"
authors = [
  { name="Dmitry Andreev", email="deal.d@me.com" },
]
description = "Data Science friendly wrapper for web3py"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Whynot63/web3-premium/"
"Bug Tracker" = "https://github.com/Whynot63/web3-premium/issues"
[tool]
